<resources>
    <string name="app_name">Privacy Vandaag</string>
    <string name="app_name_no_break">PrivacyVandaag</string>
    <string name="about_this_app_title">Over Privacy Vandaag</string>
    <string name="welcome_title">Welkom bij Privacy Vandaag</string>
    <string name="welcome_message"><![CDATA[
        <p><b>Tips bij het gebruik:</b></p>
        <p>De artikelen worden standaard elke twee uur in de achtergrond opgehaald. Omdat dit op de
            achtergrond gebeurt, kan het bij het eerste gebruik enkele minuten duren voor de
            artikelen van de afgelopen periode zijn ingeladen.</p>
        <p>U kunt horizontaal over het scherm vegen om naar een volgend katern of artikel te gaan.
            U kunt van boven naar beneden vegen om tussentijds te controleren of er nieuwe artikelen
            zijn.</p>
    ]]></string>
    <string name="never">nog nooit</string>
    <string name="update">laatste update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Instellingen</string>
    <string name="menu_reset_app">Herlaad artikelen</string>
    <string name="reset_title">Herlaad artikelen</string>
    <string name="reset_message"><![CDATA[
        <p>De artikelen in dit katern worden verwijderd en opnieuw geladen.</p>
        <p>Let op: Standaard worden alleen artikelen van de afgelopen maand opnieuw ingelezen.
        Oudere artikelen die niet als favoriet zijn gemarkeerd verdwijnen definitief uit de app.</p>
        <p>Alle artikelen blijven uiteraard gewoon op de website te lezen.</p>
    ]]></string>
    <string name="menu_edit_feeds">Instellingen nieuwsbronnen</string>
    <string name="menu_refresh">Verversen</string>
    <string name="menu_all_read">Markeer alles als gelezen</string>
    <string name="menu_section_news">nieuws</string>
    <string name="menu_section_organisations">organisaties</string>
    <string name="menu_section_other">overig</string>
    <string name="gisteren">gisteren</string>
    <string name="vandaag">vandaag</string>
    <string name="morgen">morgen</string>
    <string name="all_feeds">Alle artikelen</string>
    <string name="error">Fout</string>
    <string name="error_fetching_feed">Onleesbaar. Fout in lijst met artikelen.</string>
    <string name="network_error">Er is geen netwerkverbinding</string>
    <string name="loading">Loading…</string>
    <string name="dont_follow_feed">Niet volgen</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="checking_for_update">Controleren&#8230;</string>
    <string name="already_latest_version">U heeft de meest recente versie.</string>
    <string name="download_failed">Download is niet gelukt. Controleer de verbinding en probeer opnieuw.</string>
    <string name="installing_update">Download is gereed. Installeren vanaf</string>
    <string name="installation_failed">Installeren is helaas niet gelukt. Probeer opnieuw of installeer de update handmatig. Kijk op https://www.privacybarometer.nl/app voor meer informatie.</string>
    <string name="feeds">Organisaties</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_delete">Delete</string>
    <string name="edit_feed_title">Edit feed</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="error_feed_error">De website van de organisatie is onbereikbaar.</string>
    <string name="error_feed_process">De artikelen kunnen niet worden ingelezen.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="error_feed_import">The selected file could not be imported.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card mounted.</string>
    <string name="error_external_storage_not_available">The external storage (e.g. SD-card) is not available.</string>
    <string name="turn_notification_off">Zet meldingen uit</string>
    <string name="turn_notification_on">Zet meldingen aan</string>
    <string name="notification_are_off">Meldingen voor artikelen van %1$s staan nu uit.</string>
    <string name="notification_are_on">Meldingen voor artikelen van %1$s staan nu aan.</string>
    <string name="follow_this_feed">Volg deze berichten</string>
    <string name="unfollow_this_feed">Stop met volgen</string>
    <string name="goto_website">Ga naar website</string>
    <string name="error_option_execute">Er gaat iets fout. Probeer het opnieuw.</string>
    <string name="all">Alle artikelen</string>
    <string name="no_entries">Geen artikelen</string>
    <string name="favorites">Favorieten</string>
    <string name="search">Zoeken</string>
    <string name="context_menu_hide_read">Verberg gelezen artikelen</string>
    <string name="context_menu_show_read">Toon gelezen artikelen</string>
    <string name="context_menu_share_starred">Deel favoriete artikelen</string>
    <string name="menu_star">Favoriet</string>
    <string name="menu_unstar">Onfavoriet</string>
    <string name="menu_share">Deel</string>
    <string name="menu_full_screen">Volledig scherm</string>
    <string name="menu_copy_clipboard">Kopieer link</string>
    <string name="menu_mark_as_unread">Markeer als ongelezen</string>
    <string name="menu_reload_article">Herlaad dit artikel</string>
    <string name="share_favorites_title">PrivacyVandaag Favorieten</string>
    <string name="copied_clipboard">Link gekopieerd</string>
    <string name="get_full_text">Toon het volledige artikel</string>
    <string name="original_text">Laat de originele tekst zien</string>
    <string name="see_enclosure">Bekijk bijlage</string>
    <string name="see_link">Bekijk in browser</string>
    <string name="cant_open_link">Geen applicatie gevonden voor deze link</string>
    <string name="open_enclosure">Open bijlage</string>
    <string name="file">Bestand</string>
    <string name="download_and_save">Download en opslaan</string>
    <string name="open_link">Open link</string>
    <string name="tip_sentence">Tip: zoek binnen de artikelen die in de app geladen zijn. Ga voor het doorzoeken van het gehele archief naar de website.</string>
    <string name="tip_sentence_float">Tip: druk op knop rechtsonder om gelezen artikelen te verbergen of weer zichtbaar te maken.</string>
    <string name="tip_sentence_feeds">Tip: druk op een organisatie om deze wel/niet te volgen.</string>
    <string name="settings_category_refresh">Automatisch verversen</string>
    <string name="settings_refresh_enabled">Automatisch verversen</string>
    <string name="settings_refresh_enabled_description">Haal automatisch de nieuwste artikelen op.
    </string>
    <string name="settings_refresh_interval">Tijdsinterval</string>
    <string name="settings_category_notifications">Meldingen</string>
    <string name="settings_notifications_enabled">Meldingen aan</string>
    <string name="settings_notifications_enabled_description">Geef een melding als er een nieuw artikel is</string>
    <string name="settings_notifications_enabled_privacyVandaag">> bij nieuw privacyVandaag</string>
    <string name="settings_notifications_enabled_stadsnieuws">> bij nieuw stadsnieuws</string>
    <string name="settings_notifications_enabled_gemeenteberichten">> bij nieuw gemeentebericht</string>
    <string name="settings_notifications_enabled_evenementen">> bij nieuw evenement</string>
    <string name="settings_notifications_ringtone">Meldingstoon</string>
    <string name="settings_notifications_ringtone_none">Geen</string>
    <string name="settings_notifications_vibrate">Trillen</string>
    <string name="settings_notifications_vibrate_description">Trilstand aan als er een nieuw artikel is</string>
    <string name="settings_notifications_light">Licht</string>
    <string name="settings_notifications_light_description">Zet meldingslampje aan als er een nieuw artikel is</string>
    <string name="settings_category_content_presentation">Weergave</string>
    <string name="settings_light_theme">Licht thema</string>
    <string name="settings_light_theme_description">Gebruik het lichte thema</string>
    <string name="settings_left_panel">Uitschuifmenu</string>
    <string name="settings_left_panel_description">Laat links het uitschuifmenu zien na het opstarten</string>
    <string name="settings_keep_time">Bewaartijd van artikelen</string>
    <string name="settings_display_images">Toon afbeeldingen</string>
    <string name="settings_display_images_description">Laat eventuele afbeeldingen bij de artikelen zien</string>
    <string name="settings_preload_image_mode">Haal afbeeldingen vooraf op</string>
    <string name="settings_font_size">Lettergrootte artikelen</string>
    <string name="settings_display_oldest_first">Volgorde van artikelen</string>
    <string name="settings_display_oldest_first_description">Oudste bovenaan</string>
    <string name="settings_display_entries_fullscreen">Volledig scherm</string>
    <string name="settings_display_entries_fullscreen_description">Laat artikelen automatisch in het volledige scherm zien</string>
    <string name="position_floating_button">Plaats menuknop links</string>
    <string name="position_floating_button_description">Positioneer de knop om het menu te openen of te sluiten linksonder in het scherm.</string>
    <string name="settings_refresh_on_open">Ververs bij opstarten</string>
    <string name="settings_refresh_on_open_description">Controleer automatisch op nieuwe artikelen bij opstarten</string>
    <string name="settings_refresh_wifi_only">Ververs alleen over WiFi</string>
    <string name="settings_refresh_wifi_only_description">Automatisch controleren op nieuwe artikelen gebeurt alleen over een WiFi verbinding.</string>
    <string name="settings_visible_feeds">Zichtbare feeds</string>
    <string name="settings_widget_background">Achtergrond</string>
    <string name="settings_widget_background_description">Color and transparency of the widget background</string>
    <string name="all_feeds_widget">All feeds (incl. future)</string>
    <string name="settings_screen_proxy">Proxy</string>
    <string name="settings_category_network">Netwerk</string>
    <string name="settings_proxy_enabled">Gebruik Proxy</string>
    <string name="settings_proxy_wifi_only">Alleen over WiFi</string>
    <string name="settings_proxy_wifi_only_description">Gebruik proxy alleen over Wifi</string>
    <string name="settings_proxy_host">Host</string>
    <string name="settings_proxy_port">Port</string>
    <string name="settings_proxy_type">Type</string>
    <string name="no_new_entries">Geen nieuwe artikelen.</string>
    <plurals name="number_of_new_entries">
        
        <item quantity="one">Eén nieuw artikel van\u0020</item>
        <item quantity="other">%d nieuwe artikelen van\u0020</item>
    </plurals>
    <plurals name="number_of_new_entries_refresh_button">
        
        <item quantity="one">Eén nieuw artikel</item>
        <item quantity="other">%d nieuwe artikelen</item>
    </plurals>
    <string-array name="settings_intervals">
        
        
        
        
        
        <item>1 uur</item>
        <item>2 uren</item>
        <item>6 uren</item>
        <item>12 uren</item>
        <item>1 dag</item>
    </string-array>
</resources>