<?xml version="1.0" encoding="utf-8"?>

<!-- Deze layout is gekoppeld aan
        > fragment > GeneralPrefsFragment.java
        > layout > activity_general_prefs.xml
        > activity > GenerealPrefsActivity.java
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


    <!-- Deze optie is verplaatst naar het overflow menu in de toolbar. Zie HomeActivity.java regel 309
    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about_this_app">
        <intent android:action="privacyVandaag_about_activity_intent" />
    </PreferenceScreen>
    -->
    <!-- !!!!! NOTICE: These options corresponds with the values in values > strings.xml
                    and values > not_translatable_strings.xml -->

    <!-- automatisch verversen -->
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_refresh">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="refresh.enabled"
            android:summary="@string/settings_refresh_enabled_description"
            android:title="@string/settings_refresh_enabled"/>

        <!-- ModPrivacyVandaag: defaultValue="720000" aangepast zodat elke 2 uur wordt ververst. Origineel was defaultValue="180000" -->
        <nl.privacybarometer.privacyvandaag.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="7200000"
            android:dependency="refresh.enabled"
            android:entries="@array/settings_intervals"
            android:entryValues="@array/settings_interval_values"
            android:inputType="number"
            android:key="refresh.interval"
            android:title="@string/settings_refresh_interval"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="refreshonopen.enabled"
            android:summary="@string/settings_refresh_on_open_description"
            android:title="@string/settings_refresh_on_open"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="refreshwifionly.enabled"
            android:summary="@string/settings_refresh_wifi_only_description"
            android:title="@string/settings_refresh_wifi_only"/>
    </PreferenceCategory>

    <!-- weergave / content presentation -->
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_content_presentation">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="lighttheme"
            android:title="@string/settings_light_theme"
            android:summary="@string/settings_light_theme_description"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="leftpanel"
            android:title="@string/settings_left_panel"
            android:summary="@string/settings_left_panel_description"/>

        <!-- defaultValue="61" aangepast zodat alles 2 maand bewaard blijft. Origineel was defaultValue="4"
            Zie voor de keuzeopties values > not_translatable_strings.xml -->
        <nl.privacybarometer.privacyvandaag.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="91"
            android:entries="@array/settings_keep_times"
            android:entryValues="@array/settings_keep_time_values"
            android:inputType="number"
            android:key="keeptime"
            android:title="@string/settings_keep_time"/>

        <nl.privacybarometer.privacyvandaag.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/settings_font_sizes"
            android:entryValues="@array/settings_font_size_values"
            android:inputType="number"
            android:key="fontsize"
            android:title="@string/settings_font_size"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="display_images"
            android:title="@string/settings_display_images"
            android:summary="@string/settings_display_images_description"/>

        <nl.privacybarometer.privacyvandaag.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="ALWAYS_PRELOAD"
            android:dependency="display_images"
            android:entries="@array/settings_preload_image_modes"
            android:entryValues="@array/settings_preload_image_modes_values"
            android:inputType="text"
            android:key="preload_image_mode"
            android:title="@string/settings_preload_image_mode"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="display_oldest_first"
            android:title="@string/settings_display_oldest_first"
            android:summary="@string/settings_display_oldest_first_description"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="display_entries_fullscreen"
            android:title="@string/settings_display_entries_fullscreen"
            android:summary="@string/settings_display_entries_fullscreen_description"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="position_floating_button"
            android:title="@string/position_floating_button"
            android:summary="@string/position_floating_button_description"/>

    </PreferenceCategory>

    <!-- notificaties -->
    <!-- De notificatie settings worden gebruikt in >service > FetcherService.java -->

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_notifications">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="notifications.enabled"
            android:summary="@string/settings_notifications_enabled_description"
            android:title="@string/settings_notifications_enabled"/>

        <!-- melding voor privacyVandaag artikel -->
        <!-- Niet meer in gebruik, want er is nu een conctextmenu per channel in de left drawer
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:layout="?android:attr/preferenceLayoutChild"
            android:defaultValue="true"
            android:key="notifications.privacyVandaag"
            android:title="@string/settings_notifications_enabled_privacyVandaag"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:layout="?android:attr/preferenceLayoutChild"
            android:defaultValue="true"
            android:key="notifications.stadsnieuws"
            android:title="@string/settings_notifications_enabled_stadsnieuws"/>
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:layout="?android:attr/preferenceLayoutChild"
            android:defaultValue="false"
            android:key="notifications.gemeentenberichten"
            android:title="@string/settings_notifications_enabled_gemeenteberichten"/>
        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:layout="?android:attr/preferenceLayoutChild"
            android:defaultValue="false"
            android:key="notifications.evenementen"
            android:title="@string/settings_notifications_enabled_evenementen"/>

        -->


        <!-- ModPrivacyVandaag: android:defaultValue="content://settings/system/notification_sound" toegevoegd
            zodat de standaard beltoon gelijk wordt gekozen. Dit element ontbrak, en stond dus standaard op stil. -->
        <!--             android:defaultValue="content://settings/system/notification_sound"        -->
        <RingtonePreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:key="notifications.ringtone"
            android:ringtoneType="notification"
            android:title="@string/settings_notifications_ringtone"/>



        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:key="notifications.vibrate"
            android:summary="@string/settings_notifications_vibrate_description"
            android:title="@string/settings_notifications_vibrate"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dependency="notifications.enabled"
            android:key="notifications.light"
            android:summary="@string/settings_notifications_light_description"
            android:title="@string/settings_notifications_light"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_network">

        <PreferenceScreen
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/settings_screen_proxy">

            <CheckBoxPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:key="proxy.enabled"
                android:title="@string/settings_proxy_enabled"/>

            <CheckBoxPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dependency="proxy.enabled"
                android:key="proxy.wifionly"
                android:summary="@string/settings_proxy_wifi_only_description"
                android:title="@string/settings_proxy_wifi_only"/>

            <EditTextPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dependency="proxy.enabled"
                android:key="proxy.host"
                android:title="@string/settings_proxy_host"/>

            <EditTextPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dependency="proxy.enabled"
                android:inputType="number"
                android:key="proxy.port"
                android:title="@string/settings_proxy_port"/>

            <ListPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="0"
                android:dependency="proxy.enabled"
                android:entries="@array/settings_proxy_types_names"
                android:entryValues="@array/settings_proxy_types"
                android:inputType="number"
                android:key="proxy.type"
                android:title="@string/settings_proxy_type"/>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>