<?xml version="1.0" encoding="utf-8"?>
<!-- called from fragment > EntriesListFragment.java line -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <!-- refresh, always visible except with favorites list-->
    <!-- Niet meer nodig, want we hebben swype refresh
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
     -->
    <!-- share button, only visible with favorites list -->
    <item
        android:id="@+id/menu_share_starred"
        android:icon="@drawable/social_share"
        android:title="@string/context_menu_share_starred"
        app:showAsAction="always"/>

    <!-- mark all as read, not always visible, can be in overflow-->
    <item
        android:id="@+id/menu_all_read"
        android:icon="@drawable/read_all"
        android:title="@string/menu_all_read"
        tools:ignore="AlwaysShowAction"/>

    <!-- *** OVERFLOW *** -->
    <!-- settings, always in the overflow menu. app:showAsAction="never" puts it in overflow -->
    <item
        android:id="@+id/settings"
        android:icon="@drawable/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <!-- edit feeds, always in the overflow menu -->
    <!-- Voorlopig maar even niet!!!   -->
    <!-- Deze knop hoort bij case R.id.edit_feeds in HomeActivity op regel 298. Die staat dus ook uit!!
    <item
        android:id="@+id/edit_feeds"
        android:icon="@drawable/content_edit"
        android:title="@string/menu_edit_feeds"
        app:showAsAction="never"
       />
    -->

    <item
        android:id="@+id/about_this_app"
        android:icon="@drawable/action_settings"
        android:title="@string/about_this_app_title"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/reset_app"
        android:icon="@drawable/action_settings"
        android:title="@string/menu_reset_app"
        app:showAsAction="never"/>

</menu>